# dndai

./: CMakeLists.txt  main.cpp
classes/: CharList.cpp  CharList.hpp  ChatController.cpp  ChatController.hpp  ChatTab.cpp  ChatTab.hpp  DiceRoll.cpp  DiceRoll.hpp  LLamaInterface.cpp  LLamaInterface.hpp
tests/: test_main.cpp
